Adds Auth0 login

--- a/backend/sample.env
+++ b/backend/sample.env
@@ -1,3 +1,8 @@
-REACT_APP_GIGBASE_ENDPOINT=<URL to backend on Heroku>
-REACT_APP_GIGBASE_KEY=<your X-Hasura-Access-Key>
-REACT_APP_GIGBASE_SESSION_ID=<uuid for manually-created session>
+REACT_APP_GIGBASE_ENDPOINT=<your Hasura URL>
+REACT_APP_AUTH_DOMAIN=<your auth0 domain>
+REACT_APP_AUTH_CLIENT_ID=<your auth0 client ID>
+REACT_APP_AUTH_CALLBACK_URL=<URL to gigbase with /callback appended>
+
+# For development include these, otherwise leave them out:
+REACT_APP_HASURA_KEY=<Hasura development key>
+REACT_APP_SESSION_ID=<session ID from manually-created session>
