--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@storybook/react": "^4.0.0",
     "apollo-boost": "^0.1.15",
     "apollo-cache-persist": "^0.1.1",
+    "apollo-link-context": "^1.0.10",
+    "auth0-js": "^9.8.2",
     "graphql": "^14.0.2",
     "react": "^16.6.0",
     "react-apollo": "^2.1.11",
+    "react-async": "^3.8.3",
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1",
@@ -37,5 +40,6 @@
     "@storybook/addon-actions": "^4.0.4",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.4"
-  }
+  },
+  "homepage": "https://leadbone.com/gigbase"
 }
