--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.4"
   },
-  "homepage": "https://leadbone.com/gigbase"
+  "homepage": "https://gigbase.leadbone.com"
 }
