Start of REST work

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gigbase",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "3.1.1",
@@ -39,7 +39,8 @@
   "devDependencies": {
     "@storybook/addon-actions": "^4.1.18",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6"
+    "babel-loader": "8.0.5",
+    "webpack": "4.28.3"
   },
   "homepage": "https://gigbase.leadbone.com"
 }
